<resources>
    <string name="welcome">Welcome</string>
    <string name="hint">Hint</string>
    <string name="finish">Finish</string>
    <string name="video">Video</string>
    <string name="video1">Video 1</string>
    <string name="video2">Video 2</string>
    <string name="video3">Video 3</string>
    <string name="correct">Correct</string>
    <string name="check">Check</string>
    <string name="wrong">Incorrect</string>
    <string name="arabic">Arabic</string>
    <string name="mod1">Ratios and Proportional Relationships</string>
    <string name="mod2">The Number System</string>
    <string name="mod3">Expressions and Equations</string>
    <string name="mod4">Geometry</string>
    <string name="mod5">Statistics and Probability</string>
    <string name="username_prompt">Enter Your Username</string>
    <string name="password_prompt">Enter Your Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="app_name">RefEd</string>
    <string name="continue1">Continue</string>
    <string name="math">Math</string>
    <string name="topic1">Basic Ratios</string>
    <string name="topic2">Equivalent Ratios</string>
    <string name="topic3">Ratios with Double Number Lines</string>
    <string name="topic4">Ratios with Tape Diagrams</string>
    <string name="topic5">Comparing Rates</string>
    <string name="topic6">Rate Problems</string>
    <string name="topic7">Equivalent Ratio Word Problems</string>
    <string name="topic8">Converting decimals to percents and vice-versa</string>
    <string name="topic9">Converting percents and fractions</string>
    <string name="topic10">Findings percents - word problems</string>
    <string name="topic11">Percent word problems</string>
    <string name="topic12">Relate Fractions, Decimals and Percents</string>
    <string name="topic13">Adding and Subtracting Decimals Word Problems</string>
    <string name="topic14">Divide and Multiply Fractions in Word Problems</string>
    <string name="topic15">Greatest common factor</string>
    <string name="topic16">Least common multiple</string>
    <string name="topic17">GCF and LCM - word problems</string>
    <string name="topic18">Negative decimals on the number line</string>
    <string name="topic19">Number opposites</string>
    <string name="topic20">Ordering negative numbers</string>
    <string name="topic21">Points in the coordinate plane</string>
    <string name="topic22">Distance between points on the coordinate plane</string>
    <string name="topic23">Find absolute values</string>
    <string name="topic24">Compare absolute values</string>
    <string name="topic25">Compare and order rational numbers</string>
    <string name="topic26">Numerical inequalities (word problems)</string>
    <string name="topic27">Parts of algebraic expressions</string>
    <string name="topic28">Substitution with one and two variables</string>
    <string name="topic29">Expression value intuition</string>
    <string name="topic30">Expressions value intuition - with fractions</string>
    <string name="topic31">Expressions word problems</string>
    <string name="topic32">Writing algebraic expressions</string>
    <string name="topic33">Writing algebraic expressions - word problems</string>
    <string name="topic34">Distributive property with variables</string>
    <string name="topic35">Combining like terms</string>
    <string name="topic36">Equivalent expressions: distribution + combination</string>
    <string name="topic37">One-step equations (addition and subtraction)</string>
    <string name="topic38">One-step equations (multiplication and division)</string>
    <string name="topic39">Finding mistakes in one-step equations</string>
    <string name="topic40">One-step equations - word problems</string>
    <string name="topic41">Inequalities with variables</string>
    <string name="topic42">Graphing inequalities</string>
    <string name="topic43">Parts of a triangle</string>
    <string name="topic44">Area of right triangles</string>
    <string name="topic45">Area of a non-right triangle</string>
    <string name="topic46">Find a missing length</string>
    <string name="topic47">Area of parallelograms</string>
    <string name="topic48">Find a missing length when given the area of a parallelogram</string>
    <string name="topic49">Area of trapezoids</string>
    <string name="topic50">Area of Composite Figures (challenge questions) </string>
    <string name="topic51">Identify geometric shapes</string>
    <string name="topic52b">Identifying common 3-D shapes</string>
    <string name="topic52c">Find volume by multiplying area of base by height</string>
    <string name="topic52">Volume with fraction lengths</string>
    <string name="topic53b">Volume word problems - with fractions and decimals</string>
    <string name="topic53">Find surface areas by adding areas of faces</string>
    <string name="topic54">Surface area - word problems</string>
    <string name="topic55">Nets of polyhedra</string>
    <string name="topic56">Introduction to the coordinate plane</string>
    <string name="topic57">Area and perimeter on the coordinate plane</string>
    <string name="topic58">Drawing quadrilaterals with coordinates and calculate lengths</string>
    <string name="topic59">Statistical questions (define if questions are statistic or not)</string>
    <string name="topic60">Data sets</string>
    <string name="topic61">Frequency tables</string>
    <string name="topic62">Reading dot plots</string>
    <string name="topic63">Read histograms</string>
    <string name="topic64">Calculate the mean</string>
    <string name="topic65">Effects of shifting, adding and removing a data point (on the mean)</string>
    <string name="topic66">Calculating the median</string>
    <string name="topic67">Interpreting quartiles</string>
    <string name="topic68">Interquartile range (IQR)</string>
    <string name="topic69">Reading box plots</string>
    <string name="topic70">Creating box plots</string>
    <string name="topic71">Comparing data displays</string>
    <string name="topic72">Shape of distributions</string>
    <string name="topic73">Clusters, gaps, peaks and outliers</string>
    <string name="q1">Question 1</string>
    <string name="q2">Question 2</string>
    <string name="q3">Question 3</string>
    <string name="q4">Question 4</string>
    <string name="q5">Question 5</string>
    <string name="q6">Question 6</string>
    <string name="t1q1">1.The table below shows the amount of games available at a local school.</string>
    <string name="t1q1_2">What is the ratio of board games to chess games?</string>
    <string name="hint1">Counting the amount of board games and chess games will help you find the ratio between them.</string>
    <string name="ans11">4/3</string>
    <string name="ans12">3/4</string>
    <string name="ans13">3/2</string>
    <string name="ans14">5/3</string>
    <string name="t1q2"> What is the ratio of soccer balls to basketballs?</string>
    <string name="hint2">Counting the amount of soccer balls and basketballs will help you find the ratio between them.</string>
    <string name="ans21">5 to 3</string>
    <string name="ans22">3 to 5</string>
    <string name="ans23">5 to 4</string>
    <string name="ans24">5 to 8</string>
    <string name="t1q3"> Nazmeen is an incredible artist. She has a bag full of tools she uses to draw.
        In her bag, she has 12 colorful pencils, 5 colorful pens and 10 sheets of paper. What is the ratio of pencils to papers?
    </string>
    <string name="hint3">A ratio is the relationship between quantities of two different things. To solve this problem,
        simply pay attention to quantities given in the problem.
    </string>
    <string name="ans31">12 to 5</string>
    <string name="ans32">5 to 10</string>
    <string name="ans33">10 to 12</string>
    <string name="ans34">12 to 10</string>
    <string name="t2q1"> Select one ratio that is equivalent to 2:3</string>
    <string name="hint4">To find equivalent ratios in this problem, multiply both sides by the same number.</string>
    <string name="ans41">7:6</string>
    <string name="ans42">6:9</string>
    <string name="ans43">4:7</string>
    <string name="ans44">6:8</string>
    <string name="t2q2"> Select 2 ratios that are equivalent to 1:2</string>
    <string name="hint5">To find equivalent ratios in this problem, multiply both sides by the same number.</string>
    <string name="ans51">2:4</string>
    <string name="ans52">7:8</string>
    <string name="ans53">5:6</string>
    <string name="ans54">3:4</string>
    <string name="t2q3"> Select the correct answer</string>
    <string name="hint6">Equivalent ratios express the same relationship between numbers.
        To decide whether a ratio is equivalent or not, divide or multiply both sides by the same number.
    </string>
    <string name="ans61">1:2 is equivalent to 10:20</string>
    <string name="t4q2"> The following diagram describes the numbers of red and yellow houses in a neighborhood.</string>
    <string name="t4q2_2">What is the ratio of red houses to yellow houses?</string>
    <string name="ans111">2:1</string>
    <string name="ans112">10:6</string>
    <string name="ans113">15:4</string>
    <string name="ans114">10:15</string>
    <string name="t5q2">  Emma, Mohammed and John were playing soccer. Emma scored 10 goals in 5 matches,
        Mohammed scored 6 goals in 2 matches and John scored 16 goals in 4 matches.
        Considering each one scored the same amount of goals in each match they played,
        what is the correct order of number of goals scored in one match from least to greatest?
    </string>
    <string name="hint14">Divide the number of goals by the number of matches each one played to find
        out how many goals each one scored in one match.Then, order the numbers from least to greatest.
    </string>
    <string name="ans141">Emma, Mohammed, John</string>
    <string name="ans142">John, Emma, Mohammed</string>
    <string name="ans143">Mohammed, John, Emma</string>
    <string name="ans144">John, Mohammed, Emma</string>
    <string name="t7q3"> Amena invited guests to eat biscuits and drink tea in her house. She needs
        to bake 5 biscuits for every 10 guests and she needs 2 liters of tea for every 4 guests. If 20 guests come
        to her house, how many biscuits and liters of tea will she need to prepare?
    </string>
    <string name="ans211">Amena will need 10 biscuits and 10 liters of tea.</string>
    <string name="ans212">Amena will need 20 biscuits and 10 liters of tea.</string>
    <string name="ans213">Amena will need 15 biscuits and 20 liters of tea.</string>
    <string name="ans214">Amena will need 10 biscuits and 20 liters of tea.</string>
    <string name="t13q1">While walking on the camp, Amena felt thirsty and decided to buy a bottle of water.
        It costed $1,75. She handed the vendor a $5 bill. How much change did she receive?
    </string>
    <string name="ans371">She received $3.</string>
    <string name="ans372">She received $3,25.</string>
    <string name="ans373">She received $3,15.</string>
    <string name="ans374">She received $2,75.</string>
    <string name="t17q3"> Mohammed plays soccer in the field every 4th day, and Amena plays soccer in the same field every 5th day.
        If they both play at the same time of the day and they both played today, how many days until they go to the soccer field in the same day again?
    </string>
    <string name="ans481">They will both play soccer in the same day again in 4 days.</string>
    <string name="ans482">They will both play soccer in the same day again in 10 days.</string>
    <string name="ans483">They will both play soccer in the same day again in 16 days.</string>
    <string name="ans484">They will both play soccer in the same day again in 20 days.</string>
</resources>