<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vaibh.refed.Topic1Q1">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/txtContent"
        android:layout_width="wrap_content"
        android:layout_height="145dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="10dp"
        android:gravity="center_horizontal|center"
        android:text="@string/t1q2"
        android:textSize="24sp"
        android:textStyle="italic" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rdgChoices"
        android:layout_width="571dp"
        android:layout_height="140dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="130dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/ChoiceA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked1"
            android:text="@string/ans51" />

        <RadioButton
            android:id="@+id/ChoiceB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked2"
            android:text="@string/ans52" />

        <RadioButton
            android:id="@+id/ChoiceC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked3"
            android:text="@string/ans53" />

        <RadioButton
            android:id="@+id/ChoiceD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked4"
            android:text="@string/ans54" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonHint1"
        android:layout_width="wrap_content"
        android:layout_height="94dp"
        android:layout_above="@+id/rdgChoices"
        android:layout_below="@+id/txtContent"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="229dp"
        android:layout_marginTop="358dp"
        android:layout_marginEnd="195dp"
        android:layout_marginBottom="56dp"
        android:text="@string/hint" />

</RelativeLayout>