<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vaibh.refed.Topic1Q1">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/txtContent"
        android:layout_width="586dp"
        android:layout_height="170dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="14dp"
        android:gravity="center_horizontal|center"
        android:text="@string/t4q2"
        android:textSize="24sp"
        android:textStyle="italic" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rdgChoices"
        android:layout_width="571dp"
        android:layout_height="140dp"
        android:layout_below="@+id/textView9"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="130dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/ChoiceA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked1"
            android:text="@string/ans111" />

        <RadioButton
            android:id="@+id/ChoiceB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked2"
            android:text="@string/ans112" />

        <RadioButton
            android:id="@+id/ChoiceC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked3"
            android:text="@string/ans113" />

        <RadioButton
            android:id="@+id/ChoiceD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked4"
            android:text="@string/ans114" />
    </RadioGroup>

    <ImageView
        android:id="@+id/imgImage"
        android:layout_width="match_parent"
        android:layout_height="146dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="202dp"
        android:src="@drawable/topic4q2_pic" />

    <Button
        android:id="@+id/buttonHint1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgImage"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="244dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="269dp"
        android:text="@string/hint" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_below="@+id/buttonHint1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="86dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="63dp"
        android:text="@string/t4q2_2"
        android:textAlignment="center"
        android:textSize="18sp" />

</RelativeLayout>